GS-9756 Fixed: School and I'm A drop-downs and Review This School button are being cut off by the footer add on IE 7 Only. Please see attached screenshot.

--- a/src/webapp/res/css/school/parentReviews/parentR.css
+++ b/src/webapp/res/css/school/parentReviews/parentR.css
@@ -33,7 +33,6 @@
 }
 
 #contentGS #topSelections {
-    height: 250px;
     width: 800px;
     margin: 1em auto;
 }
